Add "new-tab" command-line option
This allows the user to choose the desired action when the application is
launched: when the "new-tab" command-line option is requested, a new
tab will be opened, otherwise raise the existing window.

Specify the action also in the desktop file. This allows application
launchers to provide direct access to this action.

--- a/data/com.github.hugolabe.Wike.desktop.in
+++ b/data/com.github.hugolabe.Wike.desktop.in
@@ -11,3 +11,8 @@ Categories=Network;GTK;
 Keywords=Wikipedia;Encyclopedia;
 # Translators: Do not translate or transliterate this text
 X-Purism-FormFactor=Workstation;Mobile;
+Actions=new-tab;
+
+[Desktop Action new-tab]
+Exec=wike --new-tab
+Name=New Tab
