Add D-Bus service file
And mark the application as D-Bus activatable. This allows application
launchers to activate it via D-Bus.

--- a/data/com.github.hugolabe.Wike.desktop.in
+++ b/data/com.github.hugolabe.Wike.desktop.in
@@ -6,6 +6,7 @@ Exec=wike
 Terminal=false
 Type=Application
 StartupNotify=true
+DBusActivatable=true
 Categories=Network;GTK;
 # Translators: Do not translate or localize the semicolons
 Keywords=Wikipedia;Encyclopedia;
