--- a/data/com.github.hugolabe.Wike.metainfo.xml.in
+++ b/data/com.github.hugolabe.Wike.metainfo.xml.in
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Copyright (C) 2021-24 Hugo Olabera <hugolabe@gmail.com> -->
+<!-- Copyright (C) 2021-25 Hugo Olabera <hugolabe@proton.me> -->
 <component type="desktop-application">
   <id>com.github.hugolabe.Wike</id>
   <metadata_license>CC0-1.0</metadata_license>
@@ -461,5 +461,5 @@
   <developer id="io.github.hugolabe">
     <name translate="no">Hugo Olabera</name>
   </developer>
-  <update_contact>hugolabe@gmail.com</update_contact>
+  <update_contact>hugolabe@proton.me</update_contact>
 </component>
