--- a/data/com.github.hugolabe.Wike.metainfo.xml.in
+++ b/data/com.github.hugolabe.Wike.metainfo.xml.in
@@ -58,6 +58,17 @@
   </branding>
 
   <releases>
+    <release version="3.2.0" date="2025-12-04">
+      <description translate="no">
+        <ul>
+          <li>Improved dark theme, now using Wikipedia's native dark skin.</li>
+          <li>An option has been added to the article menu to paste and open Wikipedia links.</li>
+          <li>The shortcuts window has been migrated to the new LibAdwaita shortcuts dialog.</li>
+          <li>Bug fixes and code improvements.</li>
+          <li>Updated translations: Basque, Croatian, Dutch, Finnish, Hebrew, Italian, Spanish, Turkish.</li>
+        </ul>
+      </description>
+    </release>
     <release version="3.1.3" date="2025-10-24">
       <description translate="no">
         <ul>
